--- a/BackEnd/ContactBook/ContactBook.API/Properties/launchSettings.json
+++ b/BackEnd/ContactBook/ContactBook.API/Properties/launchSettings.json
@@ -28,6 +28,12 @@
       },
       "publishAllPorts": true,
       "useSSL": true
+    },
+    "ContactBook.API": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "applicationUrl": "http://localhost:8080"
     }
   },
   "$schema": "https://json.schemastore.org/launchsettings.json"
