--- a/BackEnd/ContactBook/ContactBook.Application/ContactBook.Application.csproj
+++ b/BackEnd/ContactBook/ContactBook.Application/ContactBook.Application.csproj
@@ -6,4 +6,15 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="14.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="10.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ContactBook.Domain\ContactBook.Domain.csproj" />
+    <ProjectReference Include="..\ContactBook.Persistance\ContactBook.Persistance.csproj" />
+  </ItemGroup>
+
 </Project>
