--- a/BackEnd/ContactBook/ContactBook.Persistance/ContactBook.Persistance.csproj
+++ b/BackEnd/ContactBook/ContactBook.Persistance/ContactBook.Persistance.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="10.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ContactBook.Domain\ContactBook.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
