--- a/FrontEnd/Dockerfile
+++ b/FrontEnd/Dockerfile
@@ -1,8 +1,9 @@
-FROM node:latest as build-stage
+FROM node:24.13.0 as build-stage
 WORKDIR /app
 COPY package*.json ./
 
-RUN curl -sL https://unpkg.com/@pnpm/self-installer | node
+# RUN curl -sL https://unpkg.com/@pnpm/self-installer | node
+RUN npm install -g pnpm
 
 RUN pnpm install
 COPY ./ .
