--- a/sakai-vue/package.json
+++ b/sakai-vue/package.json
@@ -9,6 +9,7 @@
     },
     "dependencies": {
         "@primeuix/themes": "^2.0.0",
+        "axios": "^1.13.2",
         "chart.js": "3.3.2",
         "primeicons": "^7.0.0",
         "primevue": "^4.5.2",
