--- a/BackEnd/ContactBook/ContactBook.UnitTests/ContactBook.UnitTests.csproj
+++ b/BackEnd/ContactBook/ContactBook.UnitTests/ContactBook.UnitTests.csproj
@@ -8,7 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MSTest" Version="4.0.1" />
+    <PackageReference Include="xunit" Version="2.9.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ContactBook.Domain\ContactBook.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
